--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,19 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.5
-  intl: ^0.16.1
-  http: ^0.12.1
-  shared_preferences: ^0.5.8
+  provider: ^5.0.0
+  intl: ^0.17.0
+  http: ^0.13.3
+  shared_preferences: ^2.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
